--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel-node ./index.js --presets env node -e \"require('./index.js')\" --destination"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,11 @@
   "homepage": "https://github.com/Physer/VTF-Boilerplate#readme",
   "dependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.6.1"
+    "babel-preset-env": "^1.6.1",
+    "fs-extra": "^5.0.0",
+    "yargs": "^11.0.0"
+  },
+  "bin": {
+    "vtf-boilerplate": "./cli.js"
   }
 }
