--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "vtf-boilerplate",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.1",
+  "description": "The VTF Boilerplate project - predefined step definitions for usage with the Valtech Testing Framework",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel-node ./index.js --presets env node -e \"require('./index.js')\" --destination"
   },
   "repository": {
@@ -12,6 +11,11 @@
     "url": "git+https://github.com/Physer/VTF-Boilerplate.git"
   },
   "author": "Alex Schouls",
+  "contributors": [
+    {
+      "name": "Guido van Tricht"
+    }
+  ],
   "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/Physer/VTF-Boilerplate/issues"
